--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h4 class="color2">(HAPPY BIRTHDAY CAYANGGKU)</h4>
             <p>Dear cayanggku ,</p>
             <p>Selamat ulang tahun cantikku , hari ini adalah hari spesial bagi cayang , dimana hari ini cayang dilahirkan dan hari ini juga spesial bagi aku ,
-            karena orang yang aku sayangi dan selalu menjadi tempat untuk aku pulang dilahirkan . Cayangg adalah adalah orang yang kuat yang pernah aku kenal ,
+            karena orang yang aku sayangi dan selalu menjadi tempat untuk aku pulang dilahirkan . Cayangg adalah orang yang kuat yang pernah aku kenal ,
             selalu mampu buat nenangin aku , selalu mampu buat nguatin aku disetiap situasi , cayangg adalah wanita hebat yang aku kenal setelah ibu .
             Aku harap di usia cayangg yang bertambah ini , cayangg menjadi semakin kuat yaa buat menghadapi segala bentuk rintangan , 
             aku pasti akan selalu disamping cayangg , dan doa aku kedepannya cayanggg makin sabar yaa buat ngadepin aku wleek , pokonya doa aku yang terbaik deh buat cayangg , 
